<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    tools:context=".Operar"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="24dp"
        />


    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        android:textSize="24dp"
            />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botonS"
                android:onClick="operacion"
                android:tag="0"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botonR"
                android:onClick="operacion"
                android:tag="1"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botonM"
                android:onClick="operacion"
                android:tag="2"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botonD"
                android:onClick="operacion"
                android:tag="3"
                />

    </LinearLayout>

    <TextView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        android:textSize="24dp"
        />
</LinearLayout>